# monarch_tech_review

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude-plan-monarch-vs-ray.txt  pyproject.toml  pytest.ini
.codex/skills/zephyr-launch-validate/: SKILL.md
docs/: 01_history_and_vision.html  02_interactive_devx.html  03_fault_tolerance.html  03b_distributed_tensors.html  04_async_rl_intro.html  04_distributed_tensors.html  04_rl_intro.html  05_rl_intro.html  05_services.html  06_rdma.html  06_rdma_weight_sync.html  06_services.html  06b_weight_sync_deep_dive.html  07_async_rl_e2e.html  07_rdma_weight_sync.html  07_rl_e2e.html  07b_weight_sync_deep_dive.html  08_rl_e2e.html  index.html  monarch-vs-ray-analysis.md
notebooks/: 01_history_and_vision.py  02_interactive_devx.py  03_fault_tolerance.py  03b_distributed_tensors.py  04_async_rl.py  04_async_rl_intro.py  04_distributed_tensors.py  04_rl_intro.py  05_rl_intro.py  05_services.py  06_rdma_weight_sync.py  06_services.py  06b_weight_sync_deep_dive.py  07_async_rl_e2e.py  07_rdma_weight_sync.py  07_rl_e2e.py  07b_weight_sync_deep_dive.py  08_rl_e2e.py
scripts/: bootstrap_demo.py  demo_monarch_two_gpu_transformer_train.py  export_html.sh  zephyr_shell.sh  zephyr_uv_run.sh  zephyr_uv_sync.sh
scripts/demos/: 01_actor_abstraction.py  02_topology_meshes.py  03_control_plane.py  04_message_ordering.py  05_supervision.py  06_data_plane_rdma.py  07_distributed_tensors.py  08_interactive_devx.py
src/: rl_primitives.py
src/demo_tui/: __init__.py  dashboard.py  gpu_monitor.py  spinners.py
src/monarch_utils/: services.py
src/zorplex_rl/: __init__.py  evaluate.py  task_specs.py
tests/monarch/: test_actor_gpu_mesh.py  test_capability_guards.py  test_service_registry_gpu.py  test_spmd_serve_gpu_smoke.py
(+1 files in other folders)
