[project]
name = "monarch-gpu-mode"
version = "0.1.0"
description = "Marimo notebooks for GPU Mode presentation on Monarch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.10.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "torchmonarch>=0.3.0",
    "vllm>=0.6.0",
    "accelerate",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
