[project]
name = "monarch-gpu-mode"
version = "0.1.0"
description = "Marimo notebooks for GPU Mode presentation on Monarch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.0",
    "marimo>=0.19.9",
    "transformers>=4.40.0",
    "torchmonarch==0.3.0",
    "accelerate",
    "rich>=13.9.0",
    "html5lib",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "torchshow>=0.5.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
